--- a/WebContent/LeftNavMenu.html
+++ b/WebContent/LeftNavMenu.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <link rel="stylesheet" href="css/LeftNavMenu.css">
 
@@ -15,28 +16,38 @@
 					class="nav-text"> Dashboard </span>
 			</a></li>
 			<li class="has-subnav"><a href="Contacts.jsp"> <i
-					class="fa fa-address-book" aria-hidden="true"></i> <span class="nav-text"> Contacts </span>
+					class="fa fa-address-book" aria-hidden="true"></i> <span
+					class="nav-text"> Contacts </span>
 			</a></li>
 			<li class="has-subnav"><a href="Items.jsp"> <i
-					class="fa fa-shopping-basket"></i> <span class="nav-text"> Items </span>
+					class="fa fa-shopping-basket"></i> <span class="nav-text">
+						Items </span>
 			</a></li>
 			<li class="has-subnav"><a href="Invoice.jsp"> <i
 					class="fa fa-credit-card-alt"></i> <span class="nav-text">
 						Invoice </span>
 			</a></li>
-			<li><a href="PaymentsReceived.jsp"> <i
-					class="fa fa-rupee"></i> <span class="nav-text">
-						Payments</span>
+			<li><a href="PaymentsReceived.jsp"> <i class="fa fa-rupee"></i>
+					<span class="nav-text"> Payments</span>
 			</a></li>
-			<li><a href="Expenses.jsp"> <i class="fa fa-circle-o-notch"></i> <span
-					class="nav-text"> Expenses </span>
+			<li><a href="Expenses.jsp"> <i class="fa fa-circle-o-notch"></i>
+					<span class="nav-text"> Expenses </span>
 			</a></li>
-			<li><a href="Inventory.jsp"> <i class="fa fa-shopping-cart"></i> <span
-					class="nav-text"> Inventory </span>
+			<li><a href="Inventory.jsp"> <i class="fa fa-shopping-cart"></i>
+					<span class="nav-text"> Inventory </span>
 			</a></li>
 			<li><a href="Timesheet.jsp"> <i class="fa fa-calendar"></i>
 					<span class="nav-text"> Timesheet </span>
 			</a></li>
+
+			<li><a href="Staff.jsp"> <i class="fa fa-bar-chart"></i> <span
+					class="nav-text"> Staff Management</span>
+			</a>
+				<ul>
+					<li>Staff Details</li>
+					<li>Time and Attendance</li>
+				</ul></li>
+
 			<li><a href="Reports.jsp"> <i class="fa fa-bar-chart"></i> <span
 					class="nav-text"> Reports </span>
 			</a></li>
