Updated Staff Module

--- a/WebContent/LeftNavMenu.html
+++ b/WebContent/LeftNavMenu.html
@@ -41,13 +41,9 @@
 			</a></li>
 
 			<li><a href="Staff.jsp"> <i class="fa fa-bar-chart"></i> <span
-					class="nav-text"> Staff Management</span>
+					class="nav-text">Staff</span>
 			</a>
-				<ul>
-					<li>Staff Details</li>
-					<li>Time and Attendance</li>
-				</ul></li>
-
+		
 			<li><a href="Reports.jsp"> <i class="fa fa-bar-chart"></i> <span
 					class="nav-text"> Reports </span>
 			</a></li>
