--- a/WebContent/LeftNavMenu.html
+++ b/WebContent/LeftNavMenu.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<nav class="main-menu">
+	<nav class="main-menu" style="background-color:rgb(51, 51, 51)">
 		<ul>
 			<li><a href="Dashboard.jsp"> <i class="fa fa-home"></i> <span
 					class="nav-text"> Dashboard </span>
@@ -25,7 +25,7 @@
 			</a></li>
 			<li class="has-subnav"><a href="Invoice.jsp"> <i
 					class="fa fa-credit-card-alt"></i> <span class="nav-text">
-						Invoice </span>
+						Sale </span>
 			</a></li>
 			<li><a href="PaymentsReceived.jsp"> <i class="fa fa-rupee"></i>
 					<span class="nav-text"> Payments</span>
@@ -40,10 +40,9 @@
 					<span class="nav-text"> Timesheet </span>
 			</a></li>
 
-			<li><a href="Staff.jsp"> <i class="fa fa-bar-chart"></i> <span
+			<li><a href="Staff.jsp"> <i class="fa fa-user-o"></i> <span
 					class="nav-text">Staff</span>
 			</a>
-		
 			<li><a href="Reports.jsp"> <i class="fa fa-bar-chart"></i> <span
 					class="nav-text"> Reports </span>
 			</a></li>
