Renamed Contacts to Clients

--- a/WebContent/LeftNavMenu.html
+++ b/WebContent/LeftNavMenu.html
@@ -15,9 +15,9 @@
 			<li><a href="Dashboard.jsp"> <i class="fa fa-home"></i> <span
 					class="nav-text"> Dashboard </span>
 			</a></li>
-			<li class="has-subnav"><a href="Contacts.jsp"> <i
+			<li class="has-subnav"><a href="Clients.jsp"> <i
 					class="fa fa-address-book" aria-hidden="true"></i> <span
-					class="nav-text"> Contacts </span>
+					class="nav-text"> Clients </span>
 			</a></li>
 			<li class="has-subnav"><a href="Items.jsp"> <i
 					class="fa fa-shopping-basket"></i> <span class="nav-text">
