--- a/WebContent/LeftNavMenu.html
+++ b/WebContent/LeftNavMenu.html
@@ -23,6 +23,9 @@
 					class="fa fa-shopping-basket"></i> <span class="nav-text">
 						Items </span>
 			</a></li>
+			<li><a href="Purchase.jsp"> <i class="fa fa-shopping-cart"></i>
+					<span class="nav-text"> Purchase </span>
+			</a></li>
 			<li class="has-subnav"><a href="Invoice.jsp"> <i
 					class="fa fa-credit-card-alt"></i> <span class="nav-text">
 						Sale </span>
@@ -33,16 +36,15 @@
 			<li><a href="Expenses.jsp"> <i class="fa fa-circle-o-notch"></i>
 					<span class="nav-text"> Expenses </span>
 			</a></li>
-			<li><a href="Inventory.jsp"> <i class="fa fa-shopping-cart"></i>
-					<span class="nav-text"> Inventory </span>
-			</a></li>
-			<li><a href="Timesheet.jsp"> <i class="fa fa-calendar"></i>
-					<span class="nav-text"> Timesheet </span>
-			</a></li>
+
 
 			<li><a href="Staff.jsp"> <i class="fa fa-user-o"></i> <span
 					class="nav-text">Staff</span>
 			</a>
+			<li><a href="Timesheet.jsp"> <i class="fa fa-calendar"></i>
+					<span class="nav-text"> Timesheet </span>
+			</a></li>
+
 			<li><a href="Reports.jsp"> <i class="fa fa-bar-chart"></i> <span
 					class="nav-text"> Reports </span>
 			</a></li>
